navbar z-index fix

--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -8,3 +8,9 @@
     overflow: hidden;
     outline:none;
 }
+.navbar {
+    position: fixed;
+    width: 100%;
+    z-index: 4;
+    background-color: white;
+}
