--- a/client/src/components/NavbarMobile/NavbarMobile.scss
+++ b/client/src/components/NavbarMobile/NavbarMobile.scss
@@ -8,7 +8,7 @@
     top: 0;
     transform: translateX(100%);
     display: none;
-
+    z-index: 4;
     .navbar-mobile-button-close {
         width: 100%;
         @include flex(flex-end);
